# cookiecutter-fastapi

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: test_api_project.py  test_python_project.py
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  README.md  alembic.ini  env.txt  main.py  pyproject.toml  settings.py
{{cookiecutter.project_slug}}/.github/workflows/: build_n_push.yaml
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/migrations/versions/: 93580972b6fa_create_user_table.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_{{ cookiecutter.pkg_name }}.py
{{cookiecutter.project_slug}}/{{ cookiecutter.pkg_name }}/: __init__.py  database.py  models.py
